# localectl-libre

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci-tests.yml
completions/bash/: localectl
src/: main.rs
